--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="movie_image">Movie Image</string>
+    <string name="most_popular">Most Popular</string>
+    <string name="playing_now">Playing Now</string>
+    <string name="TRAILER">TRAILER</string>
+    <string name="SINOPSIS">SINOPSIS</string>
+    <string name="only_youtube">Solo pueden reproducirse videos de youtube</string>
 </resources>
